# backlab

./: Cargo.toml  README.md  WARP.md  rustfmt.toml
bakbon/: Cargo.toml  LICENSE  README.md
bakbon/src/: balancer.rs  cache.rs  channel.rs  error.rs  gateway.rs  lib.rs  message.rs  protocol.rs  router.rs  service.rs
bakbon/src/balancer/: mod.rs  strategy.rs
bakbon/src/core/: address.rs  error.rs  mod.rs  protocol.rs
bakbon/src/envelope/: message.rs  mod.rs  route.rs
bakbon/src/gateway/: builder.rs  mod.rs
bakbon/src/infra/: cache.rs  middleware.rs  mod.rs
bakbon/src/infra/gateway/: builder.rs  mod.rs
bakbon/src/message/: address.rs  builder.rs  endpoint.rs  envelope.rs  identity.rs  kind.rs  method.rs  mod.rs  mode.rs  priority.rs  route.rs  scheme.rs  scope.rs
bakbon/src/message/builder/: build.rs  message.rs  mod.rs
bakbon/src/message/delivery/: mod.rs  mode.rs
bakbon/src/message/endpoint/: mod.rs  scheme.rs
bakbon/src/message/envelope/: endpoint.rs  header.rs  mod.rs  scheme.rs
bakbon/src/message/payload/: encoding.rs  (+2 more)
bakbon/src/queue/: builder.rs  delivery.rs  durability.rs  mod.rs  ordering.rs  provider.rs
bakbon/src/registry/: builder.rs  mod.rs
bakbon/src/router/: builder.rs  mod.rs
bakbon/src/routing/: mod.rs  registry.rs  router.rs
bakbon/src/service/: mod.rs  processor.rs
bakbon/tests/: build_basic_message.rs  build_message.rs  build_message_with_correlation.rs  build_message_with_ids.rs  channel.rs  enum_as_ref.rs  integration_gateway.rs  integration_queue.rs  integration_router.rs  message.rs
bakbon/tests/common/: mod.rs
(+19 files in other folders)
