[package]
name = "bakbon"
version = "0.1.0"
edition = "2024"
description = "High-performance infrastructure microkernel for building protocol-agnostic distributed systems in Rust."
license = "MIT"
repository = "https://github.com/Xnil0/backlab.git"
documentation = "https://docs.rs/bakbon"
readme = "README.md"

[dependencies]
bytes = "1.11.0"
